--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
   "name": "english-course-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend to English course frontend",
   "main": "index.js",
-  "engines": {
-    "node": "14.x"
-  },
+  "repository": "https://github.com/tuliohfilho/english-course-api.git",
+  "author": "Tulio Filho <tuliofilho@outlook.com>",
+  "license": "MIT",
+  "private": false,
   "scripts": {
-    "start": "node index.js"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.3",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.6.0"
   },
   "devDependencies": {
-    "@vercel/node": "^1.12.1"
+    "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3"
   }
 }
