Change build src and routes dest in vecel.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "english-course-api",
   "version": "1.0.0",
   "description": "Backend to English course frontend",
-  "main": "index.js",
+  "main": "src/index.ts",
   "repository": "https://github.com/tuliohfilho/english-course-api.git",
   "author": "Tulio Filho <tuliofilho@outlook.com>",
   "license": "MIT",
@@ -11,6 +11,7 @@
     "node": "14.x"
   },
   "scripts": {
+    "start": "npx tsc -w",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
