--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "npx tsc -w",
+    "start": "npx tsc --outDir dist -w",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
