--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/server.js",
+      "src": "src/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.js)",
+      "src": "/(.*)",
       "dest": "/"
     }
   ]
