--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/server.js",
     "build": "npx tsc",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
