--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "repository": "https://github.com/tuliohfilho/english-course-api.git",
   "author": "Tulio Filho <tuliofilho@outlook.com>",
   "license": "MIT",
-  "main": "src/server.js",
+  "main": "server.js",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node server.js",
     "build": "npx tsc",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
