--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "./server.js",
+      "src": "src/server.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "src/index.ts",
+      "methods": ["GET", "POST", "PUT", "DELETE"]
     }
   ]
 }
