fix vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/index.ts",
+      "dest": "src/server.js",
       "methods": ["GET", "POST", "PUT", "DELETE"]
     }
   ]
