--- a/package.json
+++ b/package.json
@@ -5,23 +5,21 @@
   "repository": "https://github.com/tuliohfilho/english-course-api.git",
   "author": "Tulio Filho <tuliofilho@outlook.com>",
   "license": "MIT",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
-    "build": "npx tsc",
+    "start": "node index.js",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
-    "@types/express": "^4.17.13",
     "express": "^4.17.3",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.6.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "@vercel/node": "^1.14.0",
@@ -33,6 +31,7 @@
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.1",
-    "ts-node-dev": "^1.1.8"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3"y
   }
 }
