--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.1",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.3"y
+    "typescript": "^4.6.3"
   }
 }
