--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "./index.js"
-    }
-  ],
+  "builds": [],
   "routes": [
     {
       "src": "/(.*)",
