--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
-      "use": "npx tsc"
+      "src": "./index.ts",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
