--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Tulio Filho <tuliofilho@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn index.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
     "express": "^4.17.3",
