--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "author": "Tulio Filho <tuliofilho@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/index.ts"
   },
   "dependencies": {
     "express": "^4.17.3",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
