--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.6.0"
