--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Tulio Filho <tuliofilho@outlook.com>",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/index.ts"
   },
   "dependencies": {
